update to L16 link and hours.

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                           <th scope="row">10 Nov, 2021</th>
                           <td>L15</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:15</td>
+                          <td> 14:15 </td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721913">Video 1</a>, <a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721941">Video 2</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1JKHqnH4eTQgsT3ei-L0Tiygeq286YU1j/view?usp=sharing">Slides</a>--></td>
@@ -545,10 +545,10 @@
                           <th scope="row">15 Nov, 2021</th>
                           <td>L16</td>
                           <td style="text-align: center;"><!--<span class="label label-info">Async</span>--></td>
-                          <td> - </td>
+                          <td> 11:15 </td>
                           <td> - </td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=679841">Video</a>--></td>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1BwnDNffgiVLS1L7Per8GJYQXYq9zAPQY/view?usp=sharing">Slides</a>--></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1rwJqCOLORBV0js0MaVXliTtt65QN81RZ/view?usp=sharing">Slides</a></td>
                           <td>Data platforms for big data.</td>
                           <td>M. Rodas</td>
                         </tr>
@@ -556,7 +556,7 @@
                           <th scope="row">17 Nov, 2021</th>
                           <td rowspan="1">L17</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:15</td>
+                          <td>14:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=734913">Video</a>--></td>
                           <td><!--<a>Slides</a>--></td>
