updating news and data collections.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,28 @@
                     <p>Calendar and presentation links updated!</p>
                 </div>
                 <div class="col-lg-4">
+                    <p style="font-size:110%;">November 15th, 2021 15:25</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
+                    <p>Data Collection available to the participants!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p style="font-size:110%;">November 12th, 2021 11:00</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
+                    <p>Calendar and presentation links updated!</p>
+                </div>
+                <div class="col-lg-4">
                     <p style="font-size:110%;">November 1st, 2021 22:00</p>
                 </div>
                 <div class="col-lg-4">
@@ -166,7 +188,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: November 1st, 2021 22:00</p>
+                    <p style="font-size:110%;">Last modification: November 15th, 2021 15:25</p>
                 </div>
             </div>
         </div>
@@ -582,7 +604,7 @@
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
-                          <td>Data from the i-Log data collection experiment is made available to the students.</td>
+                          <td>Data from the i-Log data collection experiment is made available to the students. (<b>Done!</b>)</td>
                           <td> - </td>
                         </tr>
                         <tr>
