updating L17 from Marco.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Calendar and presentation links updated!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p style="font-size:110%;">November 15th, 2021 15:25</p>
+                    <p style="font-size:110%;">November 18th, 2021 11:10</p>
                 </div>
                 <div class="col-lg-4">
                     <p>&nbsp;</p>
@@ -188,7 +188,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: November 15th, 2021 15:25</p>
+                    <p style="font-size:110%;">Last modification: November 18th, 2021 11:10</p>
                 </div>
             </div>
         </div>
@@ -581,9 +581,9 @@
                           <td>14:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=734913">Video</a>--></td>
-                          <td><!--<a>Slides</a>--></td>
-                          <td>Data Cleaning and Methods for Data preparation.</td>
-                          <td>I. Bison</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1hjDcVxv-ojyofEVSaRcS6Z04XCsc7vHz/view">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/u/1/folders/14Pk2wcXLW08on_-w-cIqB5_ph03t8Fv7">Material</a></td>
+                          <td>Data visualization in biology.</td>
+                          <td>M. Chierici</td>
                         </tr>
                         <!--
                         <tr>
