updating L18 from Fausto.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Calendar and presentation links updated!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p style="font-size:110%;">November 18th, 2021 11:10</p>
+                    <p style="font-size:110%;">November 21st, 2021 22:00</p>
                 </div>
                 <div class="col-lg-4">
                     <p>&nbsp;</p>
@@ -188,7 +188,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: November 18th, 2021 11:10</p>
+                    <p style="font-size:110%;">Last modification: November 21st, 2021 22:00</p>
                 </div>
             </div>
         </div>
@@ -614,7 +614,7 @@
                           <td> - </td>
                           <td> - </td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=701165">Video</a>--></td>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1cBgg3a2bhffVAu5Q3k85ZrsB5OplLJoo/view?usp=sharing">Slides</a>--></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1M6qQJ2Y5O94WmegWbVvYxg-nu1wlCEKi/view?usp=sharing">Slides</a></td>
                           <td>Data cleaning and methods for data preparation.</td>
                           <td>F. Giunchiglia</td>
                         </tr>
