updating L21 from Marco.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: November 21st, 2021 22:00</p>
+                    <p style="font-size:110%;">Last modification: December 3th, 2021 10:00</p>
                 </div>
             </div>
         </div>
@@ -645,10 +645,10 @@
                           <td>L21</td>
                           <td style="text-align: center;"><span class="label label-warning"></span></td>
                           <td>11:15</td>
-                          <td> ? </td>
                           <td> </td>
                           <td> </td>
-                          <td>Find regularity, patterns, ...</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1ZuUzo58lY3Gn8OprFadN3tEmkHqeq-O2/view">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1hhBKiWTcmyrPy6L6WzEmNMauv-8a6yaL">Materials</a> </td>
+                          <td>Networks and differential network analysis</td>
                           <td>I. Bison, M. Chierici</td>
                         </tr>
                         <tr>
