--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: December 3th, 2021 10:00</p>
+                    <p style="font-size:110%;">Last modification: December 3th, 2021 10:20</p>
                 </div>
             </div>
         </div>
@@ -636,8 +636,8 @@
                           <td> - </td>
                           <td> - </td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=726785">Video</a>--></td>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/139GfxDkO-5dXiBRgStUk7YSCqglzN12K/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1QS5WomT9yp837cfdiiN9qbHwSGLOrfFb?usp=sharing">Material</a>--></td>
-                          <td>Sensor data analysis.</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1on_P5yW02fFgroN8NKMU9-dY4fr5nvp8/view?usp=sharing">Slides</a></td>
+                          <td>Data Integration Methodology Structure</td>
                           <td>F. Giunchiglia</td>
                         </tr>
                         <tr>
